# ParetoCL-reproduction

./: .gitignore  LICENSE  README.md  infer.py  pyproject.toml  train.py  visualise.py
scripts/: run_infer_sweep.sh  run_paretocl_minus.sh  run_table1.sh  run_train.sh
src/: utils.py
src/data/: continual_data.py
src/models/: pareto_model.py
src/pl_modules/: pareto_cl.py
