[project]
name = "paretocl-reproduction"
version = "0.1.0"
description = "Reproduction of ParetoCL (AAAI 2025) evaluation experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=5.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "pytorch-lightning>=2.5.6",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.25.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
